Fix spacing, add caret on language dropdown

--- a/imports/plugins/included/default-theme/client/styles/navbar.less
+++ b/imports/plugins/included/default-theme/client/styles/navbar.less
@@ -89,8 +89,7 @@
   .align-items(center);
   height: 100%;
 
-  padding: 0 @navbar-padding-vertical;
-  .padding-left(@navbar-padding-vertical);
+  padding: 0 14px;
 }
 
 .rui.navbar .languages,
